--- a/TP2/ECDH.ipynb
+++ b/TP2/ECDH.ipynb
@@ -4,7 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ECDH - Elliptic Curve Diffie-Hellman"
+    "# ECDH - *Elliptic Curve Diffie-Hellman*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O **ECDH** é uma variante do algoritmo de *Diffie-Hellman* mas para curvas elípticas. Mais concretamente, é um protocolo de acordo de chaves que permite que duas partes, cada uma tendo um par de chaves pública-privada sobre uma curva elíptica, estabeleçam um segredo partilhado sobre um canal inseguro."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suponhamos que a Alice quer partilhar uma chave com Bob, mas o único canal disponível é susceptível de ser interceptado por terceiros.\n",
+    "\n",
+    "\n",
+    "Inicialmente, a Alice e o Bob geram as suas próprias chaves privadas e públicas. Nomeadamente, a chave privada $d_{A}$ e a chave pública $H_{A} = d_{A}G$ estão associadas à Alice e as chaves $d_{B}$ e $H_{B}= d_{B}G$ ao Bob. Observe-se que Alice e Bob estão usando os mesmos **parâmetros de domínio**: o mesmo ponto base G, na mesma curva elíptica, sobre o mesmo corpo finito.\n",
+    "\n",
+    "\n",
+    "Seguidamente, a Alice e o Bob trocam as suas chaves públicas $H_{A}$ e $H_{B}$ sobre um canal inseguro. Note-se ainda que uma entidade terceira ao interceptar $H_{A}$ e $H_B$ não será capaz de descobrir nem $d_{A}$, nem $d_B$, sem resolver o problema do logaritmo discreto (*hard problem*).\n",
+    "\n",
+    "\n",
+    "Posteriormente, a Alice calcula $S = d_{A}H_{B}$, usando a sua própria chave privada e a chave pública de Bob. E Bob calcula $S = d_{B}H_{A}$, usando a sua própria chave privada e a chave pública de Alice. Observe-se que S é igual tanto para Alice, como para o Bob, pois:\n",
+    "$$ S=d_{A}H_{B}=d_{A}(d_{B}G)=d_{B}(d_{A}G)=d_{B}H_{A} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Segue-se uma classe Python que implementa o ECDH, usando curvas elípticas binárias segundo as seguintes restrições:\n",
+    "\n",
+    "- a dimensão $n$ do corpo $K = GF(2^{n})$ é fornecida como parâmetro de inicialização da classe;\n",
+    "\n",
+    "- a curva é definita pelas raízes em $K^{2}$ de um polinómio $\\phi \\equiv y^{2} + xy + x^{3}+x^{2}+b$, sendo o parâmetro $b$ escolhido de forma a que a curva $E/\\phi$ tenha um grupo de torsão de ordem prima e de tamanho $\\geq 2^{n-1}$."
    ]
   },
   {
@@ -31,11 +66,11 @@
     "                    P = E.random_element()\n",
     "                    p_ord = P.order()\n",
     "                    if p_ord > e_fact:\n",
-    "                        h = Integer(p_ord/e_fact)\n",
+    "                        h = Integer(p_ord/e_fact) #cofator h \n",
     "                        Q = h * P\n",
     "                        self.Q = Q\n",
     "                        self.N = e_fact\n",
-    "                        return\n",
+    "                        return E\n",
     "\n",
     "    def genPrivPubKeyPair(self):\n",
     "        k = randint(0, self.N-1)\n",
