RSA notes improved

--- a/TP2/RSA.ipynb
+++ b/TP2/RSA.ipynb
@@ -13,15 +13,15 @@
    "source": [
     "O **RSA** é um dos primeiros sistemas de criptografia de chave pública e é bastante utilizado para a transmissão segura de dados. Neste sistema, a chave de cifragem é pública e é diferente da chave de decifragem, que é secreta (privada).\n",
     "\n",
-    "## SETUP\n",
+    "## Setup\n",
     "\n",
-    "Como *input*, o algoritmo recebe um inteiro $l$ que, neste contexto, designa-se por **parâmetro de segurança**. Começa-se por escolher, de forma aleatória, dois números primos grandes **p** e **r**, com $p > 2r > 2^{l/2}$. Tais primos fazem parte da informação classificada como privada.\n",
+    "Como *input*, o algoritmo recebe um inteiro $l$ que, neste contexto, se designa por **parâmetro de segurança**. Com base neste valor são gerados dois números primos grandes **p** e **r**, com $p > 2r > 2^{l/2}$, que constituem parte da informação classificada como privada.\n",
     "\n",
     "De seguida, calcula-se: $q = p\\ q$, designado por **módulo**, que faz parte da informação classificada como pública.\n",
     "\n",
     "Determina-se: **m** $= \\phi(q) = (p-1)(r-1)$, classificado como privado.\n",
     "\n",
-    "Gera-se posteriomente um inteiro **k**, que se designa por **chave pública**, e que verifica: $mdc\\ (k, m) = 1$. Calcula-se a inversa de k módulo m, **s**, tal que: $$ s = \\frac{1}{k}\\ mod\\ m. $$\n",
+    "A chave pública, um inteiro **k** , é gerado posteriormente de modo que se verique: $mdc\\ (k, m) = 1$. Calcula-se a inversa de k módulo m, **s**, tal que: $$ s = \\frac{1}{k}\\ mod\\ m. $$\n",
     "\n",
     "O algoritmo produz assim dois *outputs*:\n",
     "- a chave privada **s**;\n",
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CIFRAGEM\n",
+    "## Cifragem\n",
     "Para cifrar uma mensagem **a** $\\not\\equiv 0\\ mod\\ (q)$, o algoritmo de cifra constrói um criptograma: $c = a^{k}\\ mod \\ q$."
    ]
   },
@@ -40,24 +40,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DECIFRAGEM\n",
-    "Para decigrar o ciprograma controi-se: **a'** $\\equiv c ^{s}\\ mod\\ q$. Deste modo, a'$\\equiv (a^{k}) ^{s}\\ mod\\ q$, donde a'$\\equiv a\\ mod\\ q$"
+    "## Decifragem\n",
+    "A decifragem de um dado criptograma $c$ é dada pela seguinte expressão: $$a' \\equiv c ^{s}\\ mod\\ q \\Rightarrow (a^{k}) ^{s}\\ mod\\ q \\equiv^{(1)} a\\ mod\\ q$$ \n",
+    "<sup> (1) **Teorema RSA**</sup>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ASSINATURA DIGITAL\n",
+    "## Assinatura Digital\n",
     "\n",
-    "Para assinar uma mensagem $0<$ **m** $< q$, o algoritmo de assinatura constrói a assinatura: **sig** $\\equiv m^{s} mod\\ q$.\n",
-    "E, para verificar a assinatura, sig, usa-se de novo a mensagem $m$ e a chave pública $k$, e testa-se a igualdade: $$ m = {sig}^{k}\\ mod \\ q. $$\n",
-    "A mensagem é autenticada para a assinatura quando a igualdade se verifica.\n"
+    "Para assinar uma mensagem $0<$ m $< q$, o algoritmo de assinatura constrói a assinatura: **sig** $\\equiv m^{s} mod\\ q$.\n",
+    "A verificação de uma assinatura **sig** referente a uma mensagem $m'$ e associada à chave pública $k$, é verificada da seguinte maneira: $$ m == {sig}^{k}\\ mod \\ q \\equiv m'^{{s}^{k}}\\ mod\\ q$$\n",
+    "Se $m == m'$ a expressão será avaliada como verdadeira, autenticando a mensagem com sucesso."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
        "1234"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,15 +149,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath (stable)",
-   "language": "sagemath",
-   "metadata": {
-    "cocalc": {
-     "description": "Open-source mathematical software system",
-     "priority": 10,
-     "url": "https://www.sagemath.org/"
-    }
-   },
+   "display_name": "SageMath 8.7",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
