Minor fix on RSA

--- a/TP2/RSA.ipynb
+++ b/TP2/RSA.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "source": [
     "## Decifragem\n",
-    "A decifragem de um dado criptograma $c$ é dada pela seguinte expressão: $$a' \\equiv c ^{s}\\ mod\\ q \\Rightarrow (a^{k}) ^{s}\\ mod\\ q \\equiv^{(1)} a\\ mod\\ q$$ \n",
-    "<sup> (1) **Teorema RSA**</sup>"
+    "A decifragem de um dado criptograma $c$ é dada pela seguinte expressão:\n",
+    "$$a' \\equiv c ^{s}\\ mod\\ q \\Rightarrow (a^{k}) ^{s}\\ mod\\ q \\equiv^{(1)} a\\ mod\\ q,\\ pelo\\ Teorema\\ RSA^{(1)}$$"
    ]
   },
   {
