Fixed Curve construction and added instruction to ensure generator point has the right order

--- a/TP2/ECDSA.ipynb
+++ b/TP2/ECDSA.ipynb
@@ -71,82 +71,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ECDSA:\n",
     "    def __init__(self):\n",
-    "        p = 2^521 - 1;\n",
-    "        F = GF(p)\n",
-    "        A = p - 3\n",
-    "        B = 10938490380737342745111123907668055699362075989516837489945863\n",
-    "        944959531161507350160137087375737596232485921322967063133094384525\n",
-    "        31591012912142327488478985984\n",
-    "        self.q = 686479766013060971498190079908139321726943530014330540939\n",
-    "        446345918554318339765539424505774633321719753296399637136332111386\n",
-    "        4768612440380340372808892707005449\n",
-    "        E = EllipticCurve([F(A), F(B)])\n",
+    "        p = 6864797660130609714981900799081393217269435300143305409394463459185543183397656052122559640661454554977296311391480858037121987999716643812574028291115057151\n",
+    "        self.q = 6864797660130609714981900799081393217269435300143305409394463459185543183397655394245057746333217197532963996371363321113864768612440380340372808892707005449\n",
+    "        b = Integer(0x051953eb9618e1c9a1f929a21a0b68540eea2da725b99b315f3b8b489918ef109e156193951ec7e937b1652c0bd3bb1bf073573df883d2c34f1ef451fd46b503f00)\n",
+    "        E = EllipticCurve(GF(p),[-3, b])\n",
+    "        E.set_order(self.q)\n",
     "        self.P = E.random_point()\n",
-    "        self.chv_priv = ZZ.random_element(1,self.q-1)\n",
-    "        self.chv_pub = self.chv_priv*self.P\n",
+    "        # calculate point with pretended order\n",
+    "        self.P = E.order()*self.P\n",
+    "        self.priv_key = ZZ.random_element(1, self.q)\n",
+    "        self.pub_key = self.priv_key * self.P\n",
     "\n",
-    "    def sign(self,m):\n",
-    "        k = ZZ.random_element(1,self.q-1)\n",
+    "    def sign(self, m):\n",
+    "        k = ZZ.random_element(1,self.q)\n",
     "        x_1 = (k*self.P)[0]\n",
     "        y_1 = (k*self.P)[1]\n",
-    "        r = mod(x_1,self.q)\n",
+    "        r = mod(x_1, self.q)\n",
     "        if r ==0:\n",
-    "            k = ZZ.random_element(1,self.q-1)\n",
+    "            k = ZZ.random_element(1,self.q)\n",
     "            x_1 = (k*self.P)[0]\n",
     "            y_1 = (k*self.P)[1]\n",
-    "            r = mod(x_1,self.q)\n",
-    "        k_1 = mod(k^(-1),self.q)\n",
+    "            r = mod(x_1, self.q)\n",
+    "        k_1 = mod(k^(-1), self.q)\n",
     "        h = hash(m)\n",
-    "        s = mod((k_1*(h+self.chv_priv*r)),self.q)\n",
+    "        s = mod((k_1*(h+self.priv_key*r)), self.q)\n",
     "        if s ==0:\n",
     "            k = ZZ.random_element(1,self.q-1)\n",
     "            x_1 = (k*self.P)[0]\n",
     "            y_1 = (k*self.P)[1]\n",
-    "            r = mod(x_1,self.q)\n",
+    "            r = mod(x_1, self.q)\n",
     "            if r ==0:\n",
     "                k = ZZ.random_element(1,self.q-1)\n",
     "                x_1 = (k*self.P)[0]\n",
     "                y_1 = (k*self.P)[1]\n",
     "                r = mod(x_1,self.q)\n",
-    "            k_1 = mod(k^(-1),self.q)\n",
+    "            k_1 = mod(k^(-1), self.q)\n",
     "            h = hash(m)\n",
-    "            s = mod((k_1*(h+self.chv_priv*r)),self.q)\n",
+    "            s = mod((k_1*(h+self.priv_key*r)), self.q)\n",
     "        sig = (r,s)\n",
     "        return sig\n",
     "\n",
-    "    def verify(self,sig,m):\n",
+    "    def verify(self, sig ,m):\n",
     "        r = sig[0]\n",
     "        s = sig[1]\n",
+    "        # w = inverse_mod(s, self.q)\n",
     "        w = mod(s^(-1),self.q)\n",
     "        h = hash(m)\n",
-    "        u_1 = mod(h*w,self.q)\n",
-    "        u_2 = mod(r*w,self.q)\n",
-    "        x_0 = (ZZ(u_1)*self.P+ZZ(u_2)*self.chv_pub)[0]\n",
-    "        v = mod(x_0,self.q)\n",
+    "        u_1 = mod(h*w, self.q)\n",
+    "        u_2 = mod(r*w, self.q)\n",
+    "        x_0 = (ZZ(u_1)*self.P+ZZ(u_2)*self.pub_key)[0]\n",
+    "        v = mod(x_0, self.q)\n",
     "        return (v == r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ECDSA = ECDSA()\n",
+    "ecdsa = ECDSA()\n",
     "msg = \"Mensagem\";\n",
-    "assinatura = ECDSA.sign(msg)"
+    "assinatura = ecdsa.sign(msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 157,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -154,13 +154,13 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ECDSA.verify(assinatura,msg)"
+    "ecdsa.verify(assinatura,msg)"
    ]
   }
  ],
