Removed redundant code

--- a/TP2/ECDSA.ipynb
+++ b/TP2/ECDSA.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Segue-se a implementação do ECDSA, usando a curva elitica prima **P-521**, definida no **FIPS186-4**. Note-se que, para a mesma, tomou-se como referência as páginas  394 e 395 do seguinte livro: *S. Yan, Number Theory for Computing, Springer, 2002*.\n",
     "\n",
-    "Seja **E** uma curva elíptica sobre $\\mathbb{F}_{p}$, sendo $p$ primo. Seja ainda P um ponto de ordem prima $q$ em $E(\\mathbb{F}_{p})$. Suponha que Alice deseje enviar uma mensagem assinada para Bob."
+    "Seja **E** uma curva elíptica sobre $\\mathbb{F}_{p}$, sendo $p$ primo. Seja ainda P um ponto da curva de ordem prima $q$ em $E(\\mathbb{F}_{p})$."
    ]
   },
   {
@@ -19,15 +19,11 @@
    "source": [
     "## SETUP\n",
     "\n",
-    "A Alice procede da seguinte forma:\n",
+    "O estabelecimento dos parâmetros usados no processo de assinatura e verificação pode ser descrito da seguinte maneira:\n",
     "\n",
-    "1. Selecciona um inteiro aleatório $x \\in [1,q-1]$;\n",
+    "1. Gerar aleatoriamente um inteiro $x \\in [1,q-1]$ que será a **chave privada**\n",
     "\n",
-    "2. Calcula $Q = xP;$\n",
-    "\n",
-    "3. Torna $Q$ público e mantém $x$ privado.\n",
-    "\n",
-    "Desta forma, aAlice gera a chave pública $Q$ e a chave privada $x$."
+    "2. Calcular $Q = xP$ que será a **chave pública**"
    ]
   },
   {
@@ -36,15 +32,15 @@
    "source": [
     "## GERAÇÃO DA ASSINATURA\n",
     "\n",
-    "Para assinar a mensagem $m$, a Alice faz o seguinte:\n",
+    "O processo de assinatura de uma mensagem $m$ segue os seguintes passos:\n",
     "\n",
-    "1. Seleciona novamente um inteiro aleatório, $k \\in [1,q-1]$;\n",
+    "1. Gerar aleatoriamente um inteiro $k \\in [1,q-1]$;\n",
     "\n",
-    "2. Determina $kP = (x_{1},y_{1})$ e $r\\equiv x_{1} (mod\\ q)$. Se $r=0$, regressa ao ponto 1;\n",
+    "2. Calcular $kP = (x_{1},y_{1})$ tal que $r\\equiv x_{1} (mod\\ q)$. Se $r=0$, voltar ao ponto 1;\n",
     "\n",
-    "3. Calcula $k^{-1} mod\\ q$;\n",
+    "3. Calcular $k^{-1} mod\\ q$;\n",
     "\n",
-    "4. Efectua $s \\equiv k^{-1}(H(m)+xr)(mod q)$, sendo $H(m)$ o valor *hash* da mensagem. Se $s=0$, retorna ao passo 1.\n",
+    "4. Calcular $s \\equiv k^{-1}(h(m)+x*r)(mod q)$, sendo $h(m)$ o valor *hash* da mensagem $m$. Se $s=0$, voltar ao ponto 1.\n",
     "\n",
     "A assinatura da mensagem $m$ é o par de inteiros $(r,s).$"
    ]
@@ -55,26 +51,30 @@
    "source": [
     "## VERIFICAÇÃO DA ASSINATURA\n",
     "\n",
-    "Para verificar a assinatura, $(r,s)$, da mensagem $m$ da Alice, o Bob deve:\n",
-    "1. Obter um cópia autêntica da chave pública da Alice, Q.\n",
+    "Dados: \n",
+    "- uma assinatura $(r,s)$ \n",
+    "- uma mensagem $m$\n",
+    "- a chave pública $Q$ associada à chave privada usada para assinar a mensagem\n",
     "\n",
-    "2. Verificar que $(r,s)$ são inteiros compreendidos no intervalo $[1,q-1]$, calcular $kP = (x_{1},y_{1})$ e $r \\equiv x_{1} (mod\\ q)$;\n",
+    "o processo de verificação pode ser descrito da seguinte maneira:\n",
     "\n",
-    "3. Determinar $w \\equiv s^{-1}(mod\\ q)$ e $H(m);$\n",
+    "1. Determinar $w \\equiv s^{-1}(mod\\ q)$ e $h(m)$;\n",
     "\n",
-    "4. Calcular $u_{1}\\equiv H(m)\\ w\\  (mod\\ q)$ e $u_{2}\\equiv r\\ w\\ (mod\\ q)$;\n",
+    "2. Calcular $u_{1}\\equiv h(m)\\ w\\  (mod\\ q)$ e $u_{2}\\equiv r\\ w\\ (mod\\ q)$;\n",
     "\n",
-    "5. Determinar $u_{1}P + u_{2}Q = (x_0,y_0)$ e $v \\equiv x_{0}(mod q);$\n",
+    "3. Determinar $u_{1}P + u_{2}Q = (x_0,y_0)$ e $v \\equiv x_{0}(mod q)$;\n",
     "\n",
-    "6. A assinatura é validade se e só se: $v = r$."
+    "4. A assinatura é validade se e só se: $v = r$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hashlib\n",
+    "\n",
     "class ECDSA:\n",
     "    def __init__(self):\n",
     "        p = 6864797660130609714981900799081393217269435300143305409394463459185543183397656052122559640661454554977296311391480858037121987999716643812574028291115057151\n",
@@ -84,55 +84,40 @@
     "        E.set_order(self.q)\n",
     "        self.P = E.random_point()\n",
     "        # calculate point with pretended order\n",
-    "        self.P = E.order()*self.P\n",
+    "        #self.P = E.order()*self.P\n",
     "        self.priv_key = ZZ.random_element(1, self.q)\n",
     "        self.pub_key = self.priv_key * self.P\n",
     "\n",
     "    def sign(self, m):\n",
-    "        k = ZZ.random_element(1,self.q)\n",
-    "        x_1 = (k*self.P)[0]\n",
-    "        y_1 = (k*self.P)[1]\n",
-    "        r = mod(x_1, self.q)\n",
-    "        if r ==0:\n",
+    "        #m_hash = hashlib.sha256(m).hexdigest().encode()\n",
+    "        m_hash = hash(m)\n",
+    "        r = s = 0\n",
+    "        while not(r and s):\n",
     "            k = ZZ.random_element(1,self.q)\n",
-    "            x_1 = (k*self.P)[0]\n",
-    "            y_1 = (k*self.P)[1]\n",
-    "            r = mod(x_1, self.q)\n",
-    "        k_1 = mod(k^(-1), self.q)\n",
-    "        h = hash(m)\n",
-    "        s = mod((k_1*(h+self.priv_key*r)), self.q)\n",
-    "        if s ==0:\n",
-    "            k = ZZ.random_element(1,self.q-1)\n",
-    "            x_1 = (k*self.P)[0]\n",
-    "            y_1 = (k*self.P)[1]\n",
-    "            r = mod(x_1, self.q)\n",
-    "            if r ==0:\n",
-    "                k = ZZ.random_element(1,self.q-1)\n",
-    "                x_1 = (k*self.P)[0]\n",
-    "                y_1 = (k*self.P)[1]\n",
-    "                r = mod(x_1,self.q)\n",
-    "            k_1 = mod(k^(-1), self.q)\n",
-    "            h = hash(m)\n",
-    "            s = mod((k_1*(h+self.priv_key*r)), self.q)\n",
+    "            x = (k*self.P)[0]\n",
+    "            r = mod(x, self.q)\n",
+    "            if r:\n",
+    "                k_1 = mod(k^(-1), self.q)\n",
+    "                s = mod((k_1 * (m_hash + self.priv_key * r)), self.q)\n",
     "        sig = (r,s)\n",
     "        return sig\n",
     "\n",
     "    def verify(self, sig ,m):\n",
     "        r = sig[0]\n",
     "        s = sig[1]\n",
-    "        # w = inverse_mod(s, self.q)\n",
     "        w = mod(s^(-1),self.q)\n",
-    "        h = hash(m)\n",
-    "        u_1 = mod(h*w, self.q)\n",
-    "        u_2 = mod(r*w, self.q)\n",
-    "        x_0 = (ZZ(u_1)*self.P+ZZ(u_2)*self.pub_key)[0]\n",
+    "        #m_hash = hashlib.sha256(m)\n",
+    "        m_hash = hash(m)\n",
+    "        u_1 = ZZ(mod(m_hash*w, self.q))\n",
+    "        u_2 = ZZ(mod(r*w, self.q))\n",
+    "        x_0 = (u_1*self.P+u_2*self.pub_key)[0]\n",
     "        v = mod(x_0, self.q)\n",
     "        return (v == r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 126,
    "metadata": {
     "scrolled": false
    },
@@ -154,7 +139,7 @@
        "True"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
