Removed dead code

--- a/TP2/ECDSA.ipynb
+++ b/TP2/ECDSA.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,13 @@
     "        E = EllipticCurve(GF(p),[-3, b])\n",
     "        E.set_order(self.q)\n",
     "        self.P = E.random_point()\n",
-    "        # calculate point with pretended order\n",
-    "        #self.P = E.order()*self.P\n",
     "        self.priv_key = ZZ.random_element(1, self.q)\n",
     "        self.pub_key = self.priv_key * self.P\n",
     "\n",
     "    def sign(self, m):\n",
-    "        #m_hash = hashlib.sha256(m).hexdigest().encode()\n",
+    "        sha256 = hashlib.sha256()\n",
+    "        sha256.update(m)\n",
+    "        #m_hash = Integer(sha256.digest())\n",
     "        m_hash = hash(m)\n",
     "        r = s = 0\n",
     "        while not(r and s):\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -139,7 +139,7 @@
        "True"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
