ECDSA message is now hashed properly

--- a/TP2/ECDSA.ipynb
+++ b/TP2/ECDSA.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "3. Calcular $k^{-1} mod\\ q$;\n",
     "\n",
-    "4. Calcular $s \\equiv k^{-1}(h(m)+x*r)(mod q)$, sendo $h(m)$ o valor *hash* da mensagem $m$. Se $s=0$, voltar ao ponto 1.\n",
+    "4. Calcular $s \\equiv k^{-1}(sha256(m)+x*r)(mod q)$. Se $s=0$, voltar ao ponto 1.\n",
     "\n",
     "A assinatura da mensagem $m$ é o par de inteiros $(r,s).$"
    ]
@@ -60,7 +60,7 @@
     "\n",
     "1. Determinar $w \\equiv s^{-1}(mod\\ q)$ e $h(m)$;\n",
     "\n",
-    "2. Calcular $u_{1}\\equiv h(m)\\ w\\  (mod\\ q)$ e $u_{2}\\equiv r\\ w\\ (mod\\ q)$;\n",
+    "2. Calcular $u_{1}\\equiv sha256(m)\\ w\\  (mod\\ q)$ e $u_{2}\\equiv r\\ w\\ (mod\\ q)$;\n",
     "\n",
     "3. Determinar $u_{1}P + u_{2}Q = (x_0,y_0)$ e $v \\equiv x_{0}(mod q)$;\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,7 @@
     "    def sign(self, m):\n",
     "        sha256 = hashlib.sha256()\n",
     "        sha256.update(m)\n",
-    "        #m_hash = Integer(sha256.digest())\n",
-    "        m_hash = hash(m)\n",
+    "        m_hash = int(sha256.hexdigest(), 16)\n",
     "        r = s = 0\n",
     "        while not(r and s):\n",
     "            k = ZZ.random_element(1,self.q)\n",
@@ -106,8 +105,7 @@
     "        r = sig[0]\n",
     "        s = sig[1]\n",
     "        w = mod(s^(-1),self.q)\n",
-    "        #m_hash = hashlib.sha256(m)\n",
-    "        m_hash = hash(m)\n",
+    "        m_hash = int(hashlib.sha256(m).hexdigest(), 16)\n",
     "        u_1 = ZZ(mod(m_hash*w, self.q))\n",
     "        u_2 = ZZ(mod(r*w, self.q))\n",
     "        x_0 = (u_1*self.P+u_2*self.pub_key)[0]\n",
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -139,7 +137,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
