Improved documentation on Ellyptic Curve DH

--- a/TP2/ECDH.ipynb
+++ b/TP2/ECDH.ipynb
@@ -11,31 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O **ECDH** é uma variante do algoritmo de *Diffie-Hellman* mas para curvas elípticas. Mais concretamente, é um protocolo de acordo de chaves que permite que duas partes, cada uma tendo um par de chaves pública-privada sobre uma curva elíptica, estabeleçam um segredo partilhado sobre um canal inseguro."
+    "O acordo de chaves *Diffie-Hellman* sobre curvas elípticas (**ECDH**) é um protocolo análogo ao desenvolvido num dado grupo multiplicativo $Z^*_p$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suponhamos que a Alice quer partilhar uma chave com Bob, mas o único canal disponível é susceptível de ser interceptado por terceiros.\n",
+    "## Algoritmo de troca de chaves\n",
+    "Consideremos duas entidades **A, B** que pretendem acordar um segredo comum.\n",
+    "Consideremos ainda que, previamente ao processo de seguida descrito, estas duas entidades acordaram os parâmetros que definem a curva elíptica e definiram um ponto (da curva) $Q$ de ordem $N$.\n",
+    "\n",
+    "1. A gera, aleatoriamente, $k_A \\epsilon Z^*_N$, que será a sua chave privada e calcula a sua chave pública $[k_A]Q$\n",
+    "2. Analogamente, B gera, aleatoriamente, a sua chave privada $k_B \\epsilon Z^*_N$ e calcula a sua chave pública $[k_B]Q$\n",
+    "3. A e B trocam as chaves públicas entre si tal que A recebe $([k_B]Q)$ e B recebe $([k_A]Q)$\n",
+    "4. A calcula $[k_A]([k_B] Q) \\equiv [k_A*k_B]Q$\n",
+    "5. B calcula $[k_A]([k_B] Q) \\equiv [k_A*k_B]Q$\n",
     "\n",
     "\n",
-    "Inicialmente, a Alice e o Bob geram as suas próprias chaves privadas e públicas. Nomeadamente, a chave privada $d_{A}$ e a chave pública $H_{A} = d_{A}G$ estão associadas à Alice e as chaves $d_{B}$ e $H_{B}= d_{B}G$ ao Bob. Observe-se que Alice e Bob estão usando os mesmos **parâmetros de domínio**: o mesmo ponto base G, na mesma curva elíptica, sobre o mesmo corpo finito.\n",
-    "\n",
-    "\n",
-    "Seguidamente, a Alice e o Bob trocam as suas chaves públicas $H_{A}$ e $H_{B}$ sobre um canal inseguro. Note-se ainda que uma entidade terceira ao interceptar $H_{A}$ e $H_B$ não será capaz de descobrir nem $d_{A}$, nem $d_B$, sem resolver o problema do logaritmo discreto (*hard problem*).\n",
-    "\n",
-    "\n",
-    "Posteriormente, a Alice calcula $S = d_{A}H_{B}$, usando a sua própria chave privada e a chave pública de Bob. E Bob calcula $S = d_{B}H_{A}$, usando a sua própria chave privada e a chave pública de Alice. Observe-se que S é igual tanto para Alice, como para o Bob, pois:\n",
-    "$$ S=d_{A}H_{B}=d_{A}(d_{B}G)=d_{B}(d_{A}G)=d_{B}H_{A} $$"
+    "Note-se que uma terceira entidade que intercepte $[k_A]Q$ e $[k_B]Q$ não será capaz de descobrir nem $k_A$, nem $k_B$, sem resolver o problema do logaritmo discreto (*hard problem*)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Segue-se uma classe Python que implementa o ECDH, usando curvas elípticas binárias segundo as seguintes restrições:\n",
+    "## Implementação\n",
+    "\n",
+    "A seguinte classe Python implementa o protocolo **ECDH**, usando curvas elípticas sobre corpos binários, com as seguintes restrições:\n",
     "\n",
     "- a dimensão $n$ do corpo $K = GF(2^{n})$ é fornecida como parâmetro de inicialização da classe;\n",
     "\n",
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,16 +160,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se pode observar, a chave gerada por ambas as entidades são equivalentes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Bob] Shared key: (z5^3 + z5^2 : z5^4 + z5^3 : 1)\n",
-      "[Alice] Shared key: (z5^3 + z5^2 : z5^4 + z5^3 : 1)\n"
+      "[Bob] Shared key: (z5^4 + z5^2 + z5 + 1 : z5 + 1 : 1)\n",
+      "[Alice] Shared key: (z5^4 + z5^2 + z5 + 1 : z5 + 1 : 1)\n"
      ]
     }
    ],
