--- a/TP2/ECDH.ipynb
+++ b/TP2/ECDH.ipynb
@@ -19,14 +19,14 @@
    "metadata": {},
    "source": [
     "## Algoritmo de troca de chaves\n",
-    "Consideremos duas entidades **A, B** que pretendem acordar um segredo comum.\n",
+    "Consideremos duas entidades, **A** e **B** que pretendem acordar um segredo comum.\n",
     "Consideremos ainda que, previamente ao processo de seguida descrito, estas duas entidades acordaram os parâmetros que definem a curva elíptica e definiram um ponto (da curva) $Q$ de ordem $N$.\n",
     "\n",
-    "1. A gera, aleatoriamente, $k_A \\epsilon Z^*_N$, que será a sua chave privada e calcula a sua chave pública $[k_A]Q$\n",
-    "2. Analogamente, B gera, aleatoriamente, a sua chave privada $k_B \\epsilon Z^*_N$ e calcula a sua chave pública $[k_B]Q$\n",
-    "3. A e B trocam as chaves públicas entre si tal que A recebe $([k_B]Q)$ e B recebe $([k_A]Q)$\n",
-    "4. A calcula $[k_A]([k_B] Q) \\equiv [k_A*k_B]Q$\n",
-    "5. B calcula $[k_A]([k_B] Q) \\equiv [k_A*k_B]Q$\n",
+    "1. A gera, aleatoriamente, $k_A \\epsilon Z^*_N$, que será a sua chave privada e calcula a sua chave pública $[k_A]Q$;\n",
+    "2. Analogamente, B gera, aleatoriamente, a sua chave privada $k_B \\epsilon Z^*_N$ e calcula a sua chave pública $[k_B]Q$;\n",
+    "3. A e B trocam as chaves públicas entre si tal que A recebe $([k_B]Q)$ e B recebe $([k_A]Q)$;\n",
+    "4. A calcula $[k_A]([k_B] Q) \\equiv [k_A*k_B]Q$;\n",
+    "5. B calcula $[k_A]([k_B] Q) \\equiv [k_A*k_B]Q$.\n",
     "\n",
     "\n",
     "Note-se que uma terceira entidade que intercepte $[k_A]Q$ e $[k_B]Q$ não será capaz de descobrir nem $k_A$, nem $k_B$, sem resolver o problema do logaritmo discreto (*hard problem*)."
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como se pode observar, a chave gerada por ambas as entidades são equivalentes."
+    "Como se pode observar, a chave gerada por ambas as entidades são equivalentes:"
    ]
   },
   {
