--- a/TP2/ECDSA.ipynb
+++ b/TP2/ECDSA.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SETUP\n",
+    "## Setup\n",
     "\n",
     "O estabelecimento dos parâmetros usados no processo de assinatura e verificação pode ser descrito da seguinte maneira:\n",
     "\n",
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GERAÇÃO DA ASSINATURA\n",
+    "## Geração da assinatura\n",
     "\n",
     "O processo de assinatura de uma mensagem $m$ segue os seguintes passos:\n",
     "\n",
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VERIFICAÇÃO DA ASSINATURA\n",
+    "## Verificação da assinatura\n",
     "\n",
     "Dados: \n",
     "- uma assinatura $(r,s)$ \n",
@@ -64,7 +64,7 @@
     "\n",
     "3. Determinar $u_{1}P + u_{2}Q = (x_0,y_0)$ e $v \\equiv x_{0}(mod q)$;\n",
     "\n",
-    "4. A assinatura é validade se e só se: $v = r$."
+    "sendo a assinatura validade se e só se: $v = r$."
    ]
   },
   {
