--- a/TP2/RSA.ipynb
+++ b/TP2/RSA.ipynb
@@ -21,10 +21,12 @@
     "\n",
     "Determina-se: **m** $= \\phi(q) = (p-1)(r-1)$, classificado como privado.\n",
     "\n",
-    "A chave pública, um inteiro **k** , é gerado posteriormente de modo que se verique: $mdc\\ (k, m) = 1$. Calcula-se a inversa de k módulo m, **s**, tal que: $$ s = \\frac{1}{k}\\ mod\\ m. $$\n",
+    "A chave pública, um inteiro **k**, é gerada posteriormente de modo que se verique: $mdc\\ (k, m) = 1$. Calcula-se a inversa de k módulo m, **s**, tal que: $$ s = \\frac{1}{k}\\ mod\\ m. $$\n",
     "\n",
     "O algoritmo produz assim dois *outputs*:\n",
+    "\n",
     "- a chave privada **s**;\n",
+    "\n",
     "- a chave pública **k** e o módulo **q**."
    ]
   },
@@ -33,7 +35,7 @@
    "metadata": {},
    "source": [
     "## Cifragem\n",
-    "Para cifrar uma mensagem **a** $\\not\\equiv 0\\ mod\\ (q)$, o algoritmo de cifra constrói um criptograma: $c = a^{k}\\ mod \\ q$."
+    "Para cifrar uma mensagem **a** $\\not\\equiv 0\\ mod\\ (q)$, o algoritmo de cifra constrói um criptograma: $$c = a^{k}\\ mod \\ q$$."
    ]
   },
   {
